add images to 11
come back and do tables

--- a/content/2-present-practice/11.md
+++ b/content/2-present-practice/11.md
@@ -33,7 +33,9 @@ For a decade we have adopted and promoted a diagnostic protocol[^1] aimed at def
 
 The painting by Allesandro Allori represents the *Allegory with the Triumph of Florence* and measures about thirty square meters. It was created in 1588–89 to celebrate the marriage of Ferdinando I, grand duke of Tuscany, to Christine of Lorraine, and was located outdoors, above the arch of the Florentine Porta al Prato. The scene was painted with a leanly bound oil, applied in thin and even layers. The fine linen canvas was made of four pieces, whose selvages were positioned horizontally and sewn together. The support was prepared with a thin, light gray ground, probably using animal glue and a little linseed oil as a binder.
 
-When we first examined the painting, it was in storage at the Pitti Palace. The canvas was mounted on a three-part folding wooden stretcher ([**fig. 11.1**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/11-Lavorini/11-Lavorini_clean/fig-11-1)), probably provided after the canvas was lined with a glue-paste adhesive in the early part of the twentieth century. The painting suffered new damage during the flood of Florence in 1966: it was partially impregnated with water, mud, and naphtha (which had leaked from buildings’ heating systems and was carried by the flood water), and diffused biological growth developed. Repeated handling of the folded painting over time had led to the permanent deformation of the original canvas along the perimeter, resulting in a 15-cm extension at the edges compared to the middle area of the support width. The old lining adhesion was compromised, with evident and diffused blistering. Over two hundred new tears, cuts, and holes weakened the canvas and some patches had been glued to the back of the lining, using animal glue or wax-resin.
+When we first examined the painting, it was in storage at the Pitti Palace. The canvas was mounted on a three-part folding wooden stretcher ([fig. 11.1](#fig-11-1)), probably provided after the canvas was lined with a glue-paste adhesive in the early part of the twentieth century. The painting suffered new damage during the flood of Florence in 1966: it was partially impregnated with water, mud, and naphtha (which had leaked from buildings’ heating systems and was carried by the flood water), and diffused biological growth developed. Repeated handling of the folded painting over time had led to the permanent deformation of the original canvas along the perimeter, resulting in a 15-cm extension at the edges compared to the middle area of the support width. The old lining adhesion was compromised, with evident and diffused blistering. Over two hundred new tears, cuts, and holes weakened the canvas and some patches had been glued to the back of the lining, using animal glue or wax-resin.
+
+{% figure 'fig-11-1' %}
 
 Thick mud residues, molds, and patches were also visible on the front. The original seams appeared partially ripped and deformed, and extensive fillings and retouching on the paint layers were mostly applied on these areas.[^2] The painting had been folded with the painted side face in. and this led to the detachment and loss of thousands of paint fragments. After the flood, an attempt to fix unstable paint layers was carried out using wax. This led to the complete waterproofing of some localized areas, especially around the seams joining the pieces of the original canvas.
 
@@ -49,11 +51,15 @@ In order to facilitate the flattening of the canvas and to be sure of safeguardi
 
 Before facing the surface, dust and mud residue were carefully removed using soft brushes and swabs with deionized water. Some local preventive fixing was needed to avoid color losses. Old fills and retouching were eliminated, mold was removed, and the areas affected were disinfected.
 
-During the surface facing, a first flattening of the canvas’s deformation was possible, thanks to the moisture added by the aqueous adhesive and to some light tensioning provided by the contraction of Japanese paper while drying ([**fig. 11.2**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/11-Lavorini/11-Lavorini_clean/fig-11-2)).[^5]
+During the surface facing, a first flattening of the canvas’s deformation was possible, thanks to the moisture added by the aqueous adhesive and to some light tensioning provided by the contraction of Japanese paper while drying ([fig. 11.2](#fig-11-2)).[^5]
+
+{% figure 'fig-11-2' %}
 
 Using a polystyrene roller, the painting was then turned facedown to work on the back and remove the old lining adhered with glue-paste.[^6] The residue of the old glue-paste was carefully removed with a scalpel. In some problematic areas where the adhesive was particularly tough, an agar gel[^7] was used to swell and soften it, making removal easier.
 
-All cuts were brought back to the correct position with the aid of tension, applied using tie-beams adjusted by rubber bands ([**fig. 11.3**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/11-Lavorini/11-Lavorini_clean/fig-11-3)), and moisture, released through a Gore-Tex fabric. Polyester fabric tie-beams were adhered to the back of the canvas with original formula Beva 371 film. The humidification, tension, and time needed were related to the extent of deformation being treated. A polyester thread was used to resew the selvages where necessary, passing through the holes of the original seam, when possible.
+All cuts were brought back to the correct position with the aid of tension, applied using tie-beams adjusted by rubber bands ([fig. 11.3](#fig-11-3)), and moisture, released through a Gore-Tex fabric. Polyester fabric tie-beams were adhered to the back of the canvas with original formula Beva 371 film. The humidification, tension, and time needed were related to the extent of deformation being treated. A polyester thread was used to resew the selvages where necessary, passing through the holes of the original seam, when possible.
+
+{% figure 'fig-11-3' %}
 
 Many cycles of humidification and tension were needed to flatten the canvas. Due to the very large size of the painting, stretching it on a temporary loom was deemed expensive and impractical, so it was decided to tension it on a thin worktop placed directly on the floor. To do this, strips of polyester canvas[^8] were fixed to the perimeter with Beva 371 film, reactivated at two different times: the first on the polyester canvas, at 80°C, and the second, on the back of the original canvas, at 65°C. This particular procedure is intended to create a stronger bond between the adhesive and the polyester canvas than between the adhesive and the original canvas, ensuring better reversibility in the future. Ideally, no adhesive will be left on the original canvas when the strips are removed; at worst, only a few traces will remain.
 
@@ -61,11 +67,15 @@ A complex problem we needed to solve was recovering the adhesion of paint layers
 
 To adhere the paint layers to the original canvas, two coats of Aquazol 500 were applied at two distinct times. First, Aquazol 500 in acetone at 10%[^10] was applied to guarantee good adhesion of the areas that presented wax and nonpolar substances. Later, a second application of the same resin dissolved at 5% in a solution of acetone and water (1:1) was used to effectively increase the flattening of the canvas.
 
-After the complete evaporation of solvents, always keeping the painting tensioned,[^11] the thermoplastic adhesive was reactivated by heat in a vacuum bag (envelope). Heat was transferred to the adhesive using water at a predetermined temperature, provided by a movable temporary “tub.” The materials needed to carry out this intervention are shown in [**fig. 11.4**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/11-Lavorini/11-Lavorini_clean/fig-11-4). The painting was placed facedown in a vacuum bag made of silicone-coated polyester film (Melinex). On the top of this bag, a tub made of a Melinex sheet placed in a wooden loom[^12] was prepared. A certain volume of water, preheated to a predetermined temperature, was poured into the tub. After ten minutes,[^13] the water was removed, and the tub was shifted to treat another area. This operation was repeated to treat the whole surface, always keeping the painting under pressure in the vacuum bag.[^14]
+After the complete evaporation of solvents, always keeping the painting tensioned,[^11] the thermoplastic adhesive was reactivated by heat in a vacuum bag (envelope). Heat was transferred to the adhesive using water at a predetermined temperature, provided by a movable temporary “tub.” The materials needed to carry out this intervention are shown in ([fig. 11.4](#fig-11-4)). The painting was placed facedown in a vacuum bag made of silicone-coated polyester film (Melinex). On the top of this bag, a tub made of a Melinex sheet placed in a wooden loom[^12] was prepared. A certain volume of water, preheated to a predetermined temperature, was poured into the tub. After ten minutes,[^13] the water was removed, and the tub was shifted to treat another area. This operation was repeated to treat the whole surface, always keeping the painting under pressure in the vacuum bag.[^14]
+
+{% figure 'fig-11-4' %}
 
 It’s important to underline that this method is not an alternative to the use of a hot table, but it permits heat transfer from the back also when working with the painting facedown is required.[^15] Using a vacuum system and applying heat through a tub containing pre-heated water guarantees that the whole surface is treated with the same pressure and temperature, substantially reducing the risk of nonhomogeneous performance of the thermoplastic adhesive.
 
-In preparation for mending structural damages, some adhesives were tested ([**table 11.1**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/11-Lavorini/11-Lavorini_clean/table-11-1)). To avoid damage to the original canvas in the future, the breaking point of the adhesive should be equal to or slightly less than the toughness value of the original yarn (see [[Orata 2009]]), measured by tension test with a dynamometer. The adhesive with a breaking point that is similar to that of the original yarn is highlighted in red in the table.
+In preparation for mending structural damages, some adhesives were tested ([table 11.1](#table-11-1)). To avoid damage to the original canvas in the future, the breaking point of the adhesive should be equal to or slightly less than the toughness value of the original yarn (see [[Orata 2009]]), measured by tension test with a dynamometer. The adhesive with a breaking point that is similar to that of the original yarn is highlighted in red in the table.
+
+**figure 'table-11-1'**
 
 All the cuts, tears, and holes (more than two hundred) were mended thread by thread using Akeogard AT35[^16] applied with a tiny brush, using an optical visor. All the structural damages and the four seams were further reinforced by applying monofilament fabric patches adhered with a mixture made of 80% Plextol B500 and 20% Dispersion K360, reactivated by butyl acetate.
 
@@ -73,17 +83,22 @@ With the first steps of consolidation, tear mending, and humidification complete
 
 Glue-paste lining did not seem suitable, not only because it would increase the weight of the whole structure, but also (mostly) due to the difficulty in maintaining the appearance of the painted surface, preventing the seams’ stitches from impressing on the front, and preserving the original seams. Lining with Beva 371 was also discarded due to the evaporation of a large amount of solvent (such as toluene) during the operation. Cold lining, using the Mehra system, was just as risky for the large amount of butyl acetate (or similar solvent) needed to reactivate Plextol.[^17] Using a thermoplastic adhesive in aqueous dispersion appeared to be a good solution to avoid the use of a fair amount of solvent, with its attendant risks of toxicity and fire.
 
-A study focused on testing different adhesives obtained by mixing Plextol B500 and Dispersion K360,[^18] in different proportions, was carried out to obtain a final mixture to be reactivated by heating. Empirical tests were performed to define the approximate reactivation temperature and the reversibility of each mixture ([[Orata and Capellaro 2013]]\|, 57–66) in order to identify the one that would better fit the features and conservative conditions of the painting (**[table 11.2](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/11-Lavorini/11-Lavorini_clean/table-11-2))**. The possibility to match specific needs makes this acrylic-based class of adhesives very advantageous in devising innovative solutions.
+A study focused on testing different adhesives obtained by mixing Plextol B500 and Dispersion K360,[^18] in different proportions, was carried out to obtain a final mixture to be reactivated by heating. Empirical tests were performed to define the approximate reactivation temperature and the reversibility of each mixture ([[Orata and Capellaro 2013]]\|, 57–66) in order to identify the one that would better fit the features and conservative conditions of the painting ([table 11.2](#table-11-2)). The possibility to match specific needs makes this acrylic-based class of adhesives very advantageous in devising innovative solutions.
 
-Samples 1 and 2 are tests on the two pure resins (see [**table 11.2**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/11-Lavorini/11-Lavorini_clean/table-11-2)). Each mixture was sprayed on a polyester canvas mock-up. After solvent evaporation, each was joined to a linen canvas mock-up in order to simulate the real conditions of use. The mock-ups were then placed in a vacuum bag and lined by increasing the temperature incrementally starting at 40°C going up to 80°C, applying a constant vacuum of 700 mbar. After each 10-degree increase, the bag was opened, each mock-up was tested, and the degree of adhesion was evaluated. Sample 4, composed of 30% Dispersion K360 and 70% Plextol B500, reactivated between 60°C and 70°C (shown in red in [**table 11.2**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/11-Lavorini/11-Lavorini_clean/table-11-2)) was the one that showed a good combination of adhesion and reversibility.
+**figure 'table-11-2'**
+
+Samples 1 and 2 are tests on the two pure resins (see [table 11.2](#table-11-2)). Each mixture was sprayed on a polyester canvas mock-up. After solvent evaporation, each was joined to a linen canvas mock-up in order to simulate the real conditions of use. The mock-ups were then placed in a vacuum bag and lined by increasing the temperature incrementally starting at 40°C going up to 80°C, applying a constant vacuum of 700 mbar. After each 10-degree increase, the bag was opened, each mock-up was tested, and the degree of adhesion was evaluated. Sample 4, composed of 30% Dispersion K360 and 70% Plextol B500, reactivated between 60°C and 70°C (shown in red in [table 11.2](#table-11-2)) was the one that showed a good combination of adhesion and reversibility.
 
 This adhesive was sprayed on the stretched polyester canvas.[^19] Particular attention was paid to maintaining the correct tension of the lining canvas during the whole process. In fact, during the reactivation of the thermoplastic adhesive, the lining canvas was stretched again on the worktop to maintain the orthogonal orientation of the warp and weft threads and to avoid the transfer of undesirable tensions to the painting during the final stretching phase. If the lining canvas is not tensioned when applying the adhesive and when the lining is adhered to the original canvas, its threads will remain more extensible. When the lined painting is finally stretched on the definitive stretcher, more tension would be required to first stretch those loose threads, before transferring tension to the whole lined support. This excessive tension could result in damage to the original canvas, which is usually less elastic than the new lining canvas.[^20]
 
 Before lining the painting facedown in the vacuum system, it was necessary to fill the biggest losses with stucco, to avoid the original canvas being pushed towards the paint surface, where paint layers were missing.
 
-The adhesion of new canvas was carried out in a vacuum bag (envelope), with the painting placed facedown on a worktop. Nonwoven fabric[^21] was used as a cushioning layer, to preserve the thin brushstrokes, keeping the seams on the back at the same time. The adhesive was reactivated by placing 70°C water inside a loom and treating circumscribed areas of about 1 square meter using the tub system described earlier and outlined in [**fig. 11.4**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/11-Lavorini/11-Lavorini_clean/fig-11-4). To stretch the canvas on the final expandable stretcher, the painting was positioned facedown to reduce the forces applied at the edges.
+The adhesion of new canvas was carried out in a vacuum bag (envelope), with the painting placed facedown on a worktop. Nonwoven fabric[^21] was used as a cushioning layer, to preserve the thin brushstrokes, keeping the seams on the back at the same time. The adhesive was reactivated by placing 70°C water inside a loom and treating circumscribed areas of about 1 square meter using the tub system described earlier and outlined in ([fig. 11.4](#fig-11-4)). To stretch the canvas on the final expandable stretcher, the painting was positioned facedown to reduce the forces applied at the edges.
 
-Not all the losses were filled and retouched, because the art historian who directed the conservation treatment chose to leave a historical memory of the flood of Florence. When the treatment was finished, the painting was exhibited at the Medici Chapels in Florence ([**fig. 11.5**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/11-Lavorini/11-Lavorini_clean/fig-11-5)).
+
+Not all the losses were filled and retouched, because the art historian who directed the conservation treatment chose to leave a historical memory of the flood of Florence. When the treatment was finished, the painting was exhibited at the Medici Chapels in Florence ([fig. 11.5](#fig-11-5)).
+
+{% figure 'fig-11-5' %}
 
 ## Conclusion
 
