change double quotes to single

--- a/content/2-present-practice/9.md
+++ b/content/2-present-practice/9.md
@@ -73,9 +73,9 @@ A high-volume, low-pressure (HVLP) compressed-air spray gun is used to spray the
 
 The optimum result is achieved when the adhesive is sprayed from different angles in more than one layer. The aim is to use as little adhesive as possible, something that is currently judged through experience. The coating should remain open and “fluffy” so as to allow the solvent vapors easy access. A thinner layer of adhesive will react more quickly to the solvent vapors and will need less pressure to create a bond, but the bond achieved will be more resistant if the adhesive layer is more substantial. It is, however, never the aim to have a thick layer of adhesive! The ultimate thickness of the sprayed adhesive layer is considered one of the key variables of the system. We suggest those new to the system practice these decision-making processes on mock-ups to gain insight into such variables. [Figs. 9.1](#fig-9-1) and [9.2](#fig-9-2) show an example of the dried adhesive layer applied to an open-woven linen canvas.
 
-{% figure "fig-9-1" %}
+{% figure 'fig-9-1' %}
 
-{% figure "fig-9-2" %}
+{% figure 'fig-9-2' %}
 
 The sprayed adhesive is allowed to dry before lining occurs. The two canvases are brought together before a subsequent bond is effected within a low-pressure envelope. The original canvas is carefully positioned on the lining canvas in contact with the sprayed area. Smaller paintings can be lined face up with the lining canvas loomed or untensioned, while larger paintings are typically lined without being tensioned and face down. In the latter case, the lining canvas is often rolled into position over the exposed reverse of the original. It is imperative that placement is carried out carefully and precisely, so as not to flatten the fluffed, open network of the adhesive and to ensure that the weave of the lining canvas aligns with that of the original. Dragging the original over the sprayed adhesive surface will deform the adhesive surface and compress it into a continuous coating.
 
@@ -83,7 +83,7 @@ The sprayed adhesive is allowed to dry before lining occurs. The two canvases ar
 
 The low-pressure envelope consists of two differing thicknesses of high-density polyethylene (HDPE) plastic sheeting and a ring of perforated pipes connected to a centrifugal fan (or vacuum cleaner) ([fig. 9.3](#fig-9-3)). Both plastic sheets should be solvent (and heat) resistant. The plastic sheeting is typically sourced at local building merchants. The thicker plastic sheet can be stretched to a working frame that is larger than the lining canvas or taped to a flat surface such as a table or floor. The thinner, unstretched plastic sheet should be flexible enough to accommodate surface topography (e.g., impasto, cupping). In some cases, the setup can be reversed.
 
-{% figure "fig-9-3" %}
+{% figure 'fig-9-3' %}
 
 The design of the low-pressure envelope is another key variable of this adaptive system. Varying the thickness and tension of the plastic sheeting will modify the pressure exerted. The flexibility of the plastic sheeting allows an even pressure to be applied over the whole surface area as the plastic conforms to the topography of the structure within the low-pressure envelope. A stiffer sheet of plastic (such as Melinex) would exert pressure on high points and the force exerted would be imposed on a smaller area. Using a too-stiff membrane could potentially cause moating or even flatten impastos; it could also push out-of-plane structures, such as seams, forward. Slight deformations in the canvas can, however, be manipulated, but the system does not exert sufficient pressure to push severe deformations into plane.
 
@@ -107,11 +107,11 @@ Testing ensures that the best solvent is selected. We recommend using smaller se
 
 The lining is carried out within the low-pressure envelope ([fig. 9.4](#fig-9-4)). First, the solvent vapors are introduced into the envelope using a “solvent-delivery cloth”—typically, an open-weave cotton cheesecloth. The ability of the solvent-delivery cloth to absorb the solvents used will dictate the volume of solvent that is needed; the volume used at SRAL is 60 ml of solvent per square meter of cheesecloth. The cheesecloth should be slightly larger than the area of sprayed adhesive, as it will shrink slightly as the fluid solvent is absorbed.
 
-{% figure "fig-9-4" %}
+{% figure 'fig-9-4' %}
 
 The solvent-delivery cloth is rolled up and encapsulated in plastic (clingfilm or Saran wrap) before the solvent is introduced. The solvent is injected into the package using a needle and syringe. Sufficient time must be allowed before placing the solvent-delivery cloth in the envelope for the solvent to spread evenly throughout the cloth. When the solvent has evenly dampened the solvent-delivery cloth and the lining set up is established, it is rolled out inside the envelope, placed at the reverse of the lining canvas, as can be seen in [fig. 9.5](#fig-9-5). Placing the cloth in the envelope and rolling it out inside the envelope should be practiced until it can be done quickly enough that solvent is not lost through evaporation (during the application process).
 
-{% figure "fig-9-5" %}
+{% figure 'fig-9-5' %}
 
 The solvent vapors, thus delivered, defuse through the lining fabric to the open adhesive network. Once the adhesive is tacky (but not dissolved), the solvent-delivery cloth is removed; typically, this takes between ten and twenty minutes. Air is extracted from the envelope to expedite the activation time, but continual pressure is not necessary at this stage. The solvent-delivery cloth should be replaced with a dry cloth to facilitate solvent evaporation during bond formation.
 
@@ -119,9 +119,9 @@ Once the solvent-delivery cloth has been removed, the air is extracted from the 
 
 We recommend that conservators experiment and become comfortable with the system variables before undertaking a mist lining. Results are impressive ([figs. 9.6](#fig-9-6) and [9.7](#fig-9-7)). Aspects to consider are pretreatments, thickness of the adhesive layer, the type of solvents and lining canvas selected, and the setup of the envelope.
 
-{% figure "fig-9-6" %}
+{% figure 'fig-9-6' %}
 
-{% figure "fig-9-7" %}
+{% figure 'fig-9-7' %}
 
 ## Mist-Lining Dissemination
 
