--- a/content/2-present-practice/10.md
+++ b/content/2-present-practice/10.md
@@ -23,7 +23,7 @@ Italy is a small and challenging country with a huge heritage to preserve and a 
 
 At the Yale conference in 2019 we all focused on linings, showing different approaches and methods, but only a few presentations mentioned the need for some sort of consolidation of the paint layers. In my practice I deal with many different cases that show severe deterioration. What I see, most of the time, apart from structural damage (tears, accidents, deformation, etc.) is the loss of strength of all original materials, due mostly to inappropriate environmental conditions. I can’t mention all the different forms that the degradation takes, but what worries me most is the increase in porosity of many painting structures, the weakness of the supports, the risk of losses, and in general the fragility of these incredible artifacts ([fig. 10.1](#fig-10-1)).
 
-{% figure "fig-10-1" %}
+{% figure 'fig-10-1' %}
 
 Consolidation is an irreversible process, and for this reason it is viewed as an embarrassment, something that’s better not to talk about. The Center for the Study of Restoration Materials (CESMAR7), an Italian association devoted to research on polychrome surfaces, organized two international meetings on this specific issue in 2006 and 2008 ([[CESMAR7 2008]]; [[CESMAR7 2010]]). We realized at that time only a few publications covered the subject and little research was being done; it looked to us that everybody was trying to avoid this field full of uncertainties.
 
@@ -41,7 +41,7 @@ In my presentation at the conference I showed how lining history developed in It
 
 During my career I have had to remove some of these old linings and many times I could assess how respectful they were, still showing adequate adhesion after three hundred years but also easy to remove ([fig. 10.2](#fig-10-2)). The most interesting observation is the stability they often show when mounted on strainers with no means of expansion. These skilled artisans changed and modified their methods over time, and this history still belongs to our cultural environment, despite huge changes in the last fifty years.
 
-{% figure "fig-10-2" %}
+{% figure 'fig-10-2' %}
 
 My practice was influenced by the “Roman method” designed by the Istituto Centrale per il Restauro (ICR). This method was brought to the ICR by assistants to Mauro Pelliccioli, a famous Italian restorer from Bergamo who was called to provide linings for war-damaged paintings. In 1963, facing the restoration of the three big paintings by Caravaggio, Giovanni Urbani, the head of paintings labs, refined the method by introducing the use of temporary expandable metal lining stretchers, instead of the heavy wooden looms that were unable to control tension during the lining process. The original Bergamo recipe went through some modifications, as did the ironing process.
 
@@ -101,7 +101,7 @@ Gel strength (GS) is measured in terms of the Bloom number.[^3] Manufacturers pr
 
 Depending on Bloom value, gelatins vary their behavior with moisture and their rate of sorption and desorption. Mechanical tests in the conservation literature show curves measured at different RH values but, until now, none of them has specified the gel strength, only the general type of gelatin: rabbit, sturgeon, hide, or bone. Because it’s difficult to find precise technical data on gelatin suppliers’ labeling, it’s probably necessary to develop our manual and sensory skills to (at least) establish a method to estimate gel strength. Specific features can be interpreted and evaluated to correlate with the Bloom scale: speed and quantity of water absorption/release, speed of gel degradation, color, smell, viscosity, time of tack, and gel stiffness. Sturgeon bladder glue Bloom values have only recently been investigated. (All the samples I tried had different Bloom values, as did other gelatins, and any considerations related to flexibility or the higher stability of bladder collagen are not correct if not related to measured Bloom and RH values [[fig. 10.3](#fig-10-3)] ([[Bridarolli et al. 2022]]).
 
-{% figure "fig-10-3" %}
+{% figure 'fig-10-3' %}
 
 The range of Bloom values for an animal glue suitable for paintings conservation starts at approximately 150 to 400. Bloom 250 is an average that can be used for most of the purposes mentioned, but it is also possible to define more precise values for each use. Lower Bloom solutions have lower viscosity and longer setting/gelling times (but less strength), so these are useful when better penetration is needed.
 
@@ -131,7 +131,7 @@ As we get more confident with these methods and manipulate them better, we will 
 
 -   Variation of density and viscosity could be achieved by adding or reducing the amount of water or by adding natural and synthetic materials, such as alum salts, or chia or carob seed powder, high-gluten flours, Klucel G and carboxymethyl cellulose (CMC), Carbopol, and other thickeners ([fig. 10.4](#fig-10-4)).
 
-{% figure "fig-10-4" %}
+{% figure 'fig-10-4' %}
 
 -   Variation of adhesive properties by increasing or reducing the amount of natural and synthetic adhesives in the mixtures and, potentially, using specific flour blends.
 
@@ -169,13 +169,13 @@ When dry, the wet strength tissue provides good protection from mechanical stres
 
 The lining process is extremely simplified. The selected open weave canvas is stretched on a provisional expandable lining stretcher that can accommodate a wide range of dimensions and consistently control canvas tension ([fig. 10.5](#fig-10-5)).
 
-{% figure "fig-10-5" %}
+{% figure 'fig-10-5' %}
 
 The adhesive mixture is then applied on the reverse of the painting in an even coat, and the working stretcher is correctly positioned on top of it. More adhesive is applied to wet the new canvas and provide a first bonding ([figs. 10.6](#fig-10-6) and [10.7](#fig-10-7)).
 
-{% figure "fig-10-6" %}
+{% figure 'fig-10-6' %}
 
-{% figure "fig-10-7" %}
+{% figure 'fig-10-7' %}
 
 The glue application behaves as a very slow humidifier that relaxes deformation and distortions. It is possible to set the time for an even humidification process, depending on the degree of deformation. In cases where deformations have been pretreated and the painting is flat, one can immediately apply gentle tension to the lining canvas and remove excess adhesive by manually pressing with wooden spatulas and other tools for an even application.
 
