--- a/content/2-present-practice/12.md
+++ b/content/2-present-practice/12.md
@@ -28,7 +28,9 @@ Since its introduction by Gustav A. Berger in the early 1970s, Beva 371 has been
 
 With the application of heat and solvents, canvas lining fabrics can be peeled away from the reverse of an easel painting, but rigid support panels cannot, therefore different strategies must be devised. The strong adhesive properties of Beva 371 and its rather high activation temperature further complicate the procedure. The adhesive used for the marouflage procedure described in this essay is Beva 371b, which replaced the original Berger formulation in 2010. Laropal K80 (BASF), a tackifier in the original adhesive, was discontinued in 2008. In the reformulated Beva 371b, “an aldehyde ketone resin” was substituted for it ([[Conservator’s Products Company 2010]]).
 
-In 2016, Puvis de Chavannes’s *Philosophy* mural ([**fig. 12.1**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/12-Hodkinson%20Pocobene/fig-12-1)), one of nine monumental murals the artist painted for the Grand Staircase of the Boston Public Library in 1895–96, underwent a major conservation campaign. Delamination of the 435.6 x 217.8 cm mural canvas and failure of the underlying plaster necessitated emergency removal of the mural from the wall, mounting of the canvas onto a rigid support panel, and reinstallation in its niche. The project was presented by the authors at the 2017 AIC Conference General Session in Chicago; however, time constraints did not permit a thorough discussion of the unexpected failure of the aluminum honeycomb panel support during the lining procedure. This necessitated the reversal of the marouflage lining and replacement of the panel with one of better design and materials.
+In 2016, Puvis de Chavannes’s *Philosophy* mural ([fig. 12.1](#fig-12-1)), one of nine monumental murals the artist painted for the Grand Staircase of the Boston Public Library in 1895–96, underwent a major conservation campaign. Delamination of the 435.6 x 217.8 cm mural canvas and failure of the underlying plaster necessitated emergency removal of the mural from the wall, mounting of the canvas onto a rigid support panel, and reinstallation in its niche. The project was presented by the authors at the 2017 AIC Conference General Session in Chicago; however, time constraints did not permit a thorough discussion of the unexpected failure of the aluminum honeycomb panel support during the lining procedure. This necessitated the reversal of the marouflage lining and replacement of the panel with one of better design and materials.
+
+{% figure 'fig-12-1' %}
 
 In addition to describing the procedure implemented to reverse the marouflage and the successful remounting of the mural canvas, the logistical complications of undertaking such a procedure are presented in this paper. The difficulty of carrying out the reversal led to a reassessment of using Beva 371b as recommended by the manufacturers. Tests conducted on mock-up panels led to a modification of the adhesive to reduce its strength, tack, and melting point—and by extension increased its reversibility—while still retaining its essential properties as a suitable marouflage lining adhesive.
 
@@ -36,7 +38,9 @@ In addition to describing the procedure implemented to reverse the marouflage an
 
 The murals in the grand staircase of the Boston Public Library were painted on canvas by Puvis de Chavannes in Paris. The artist achieved his famed fresco-like surfaces by using various innovative techniques, including painting on a coarse, plain-weave linen canvas; priming the canvas with animal glue size; applying an extremely thin, absorbent chalk ground bound in animal glue; draining his oils by placing them on blotting paper; thinning his paints with turpentine; adding extensive amounts of white lead to his color mixtures; and leaving the mural surfaces unvarnished ([[Hensick, Olivier, and Pocobene 1997]]).
 
-Upon completion, the reverse of each mural was primed with red lead in oil, rolled, shipped to Boston, and mounted to the plaster walls using the marouflage technique ([**fig. 12.2**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/12-Hodkinson%20Pocobene/fig-12-2)). The original method of attachment was to adhere the canvas to the wall with a paste of lead white in linseed oil applied to both the wall and the back of the canvas painting, which was then pressed onto the wall with rollers. While the adhesive was curing, the canvas was secured around the perimeter by a series of metal tacks.
+Upon completion, the reverse of each mural was primed with red lead in oil, rolled, shipped to Boston, and mounted to the plaster walls using the marouflage technique ([fig. 12.2](#fig-12-2)). The original method of attachment was to adhere the canvas to the wall with a paste of lead white in linseed oil applied to both the wall and the back of the canvas painting, which was then pressed onto the wall with rollers. While the adhesive was curing, the canvas was secured around the perimeter by a series of metal tacks.
+
+{% figure 'fig-12-2' %}
 
 In late 2014, a large canvas bulge and undulations were discovered in the upper portions of the mural. Salt efflorescence observed on the surrounding marble confirmed moisture infiltration. None of this was a surprise, as the mural has had a history of moisture problems, as noted in 1993 when the Puvis de Chavannes murals were last conserved by the Straus Center for Conservation, Harvard Art Museums ([[Hensick, Olivier, and Pocobene 1997]]). Mapping of the mural surface revealed that nearly 80% of the canvas had separated from the plaster substrate, yet along the left and bottom edges, the canvas was still very firmly attached to the wall.
 
@@ -72,7 +76,9 @@ Belgian linen was chosen as the primary facing material for the mural. Strips me
 
 At this point, the most nerve-wracking component of the project could begin: the detachment of the mural from the wall. The mural was secured at the top with padded plywood forms and pressure clamps. Working from the bottom up, the mural portions still firmly attached to the plaster wall were detached by severing the plaster from the metal lath substrate using modified slate rippers and vibration applied with a rubber mallet through a padded plywood sheet.
 
-As the mural became detached, linen facing flaps extending beyond the perimeter of the mural were wrapped and stapled to the lightweight support panels. As the work proceeded up the surface, more panels were affixed and locked together to keep the mural in plane. Finally, with much of the mural supported by the locked panel supports, the section within the arch was detached. Once the entire mural was fully detached, full-length vertical and horizontal wood stiffeners were attached to the panel support system ([**fig. 12.3**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/12-Hodkinson%20Pocobene/fig-12-3)). A block-and-tackle system was connected from the staging to the rigid frame support on the mural to guide it out. The supported mural was then lowered, slowly coming to rest face down on the staging deck. The mural was then removed from the deck and transported to a specially modified treatment space within the Boston Public Library.
+As the mural became detached, linen facing flaps extending beyond the perimeter of the mural were wrapped and stapled to the lightweight support panels. As the work proceeded up the surface, more panels were affixed and locked together to keep the mural in plane. Finally, with much of the mural supported by the locked panel supports, the section within the arch was detached. Once the entire mural was fully detached, full-length vertical and horizontal wood stiffeners were attached to the panel support system ([fig. 12.3](#fig-12-3)). A block-and-tackle system was connected from the staging to the rigid frame support on the mural to guide it out. The supported mural was then lowered, slowly coming to rest face down on the staging deck. The mural was then removed from the deck and transported to a specially modified treatment space within the Boston Public Library.
+
+{% figure 'fig-12-3' %}
 
 The history of water leaks behind the mural precluded the possibility of remounting the mural onto a new plaster wall, so the decision was made to marouflage the mural onto a rigid panel support that could be easily installed—and deinstalled in the future, if necessary. The plaster remnants on the verso were removed using first a reciprocating multitool to cut through the bulk of the plaster, followed by mechanical removal of the harder 3 mm–finish coat using chisels. The lead-white adhesive was well bound, uniform, and strongly adhered to the reverse of the mural canvas, leaving none of the canvas exposed, thus it was left undisturbed. In preparation for lining, the reverse of the mural canvas was sealed with one coat of warm Beva 371b diluted with low-aromatic mineral spirits following the manufacturer’s instructions.
 
@@ -84,13 +90,17 @@ The canvas mural, with the linen interleaf attached to it and still on its panel
 
 Considerable thought was given to the approach and materials to be used for remounting the mural. From the outset it was decided to reattach the mural to a rigid support. This would respect the artist’s intent to marouflage and would provide continuous support for the heavy canvas. For this, an aluminum honeycomb panel was specially fabricated. In addition to providing the necessary rigidity, the conductivity of the aluminum would also facilitate the transfer of heat through its structure for lining at the recommended temperature of 65°C.
 
-Given the size of the mural, the marouflage was to be carried out in four successive sections. A 122 x 244 cm temperature-controlled, silicone rubber heat sheet placed beneath the panel would deliver the required heat to each section ([**fig. 12.4**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/12-Hodkinson%20Pocobene/fig-12-4)). Before heat was applied, trial runs were performed to ensure that enough vacuum pressure could be applied over the entire Dartek film envelope. This was achieved using two small vacuum pumps placed on either side of the panel, which were connected with plastic tubing to 1.25 cm polypropylene cord running along the outer edge of the panel. In the final trial, the mural and all the adhesion components were sealed with Dartek film, and the required suction successfully applied. Once we were confident that this method would work as intended, marouflage of the mural could proceed.
+Given the size of the mural, the marouflage was to be carried out in four successive sections. A 122 x 244 cm temperature-controlled, silicone rubber heat sheet placed beneath the panel would deliver the required heat to each section ([fig. 12.4](#fig-12-4)). Before heat was applied, trial runs were performed to ensure that enough vacuum pressure could be applied over the entire Dartek film envelope. This was achieved using two small vacuum pumps placed on either side of the panel, which were connected with plastic tubing to 1.25 cm polypropylene cord running along the outer edge of the panel. In the final trial, the mural and all the adhesion components were sealed with Dartek film, and the required suction successfully applied. Once we were confident that this method would work as intended, marouflage of the mural could proceed.
+
+{% figure 'fig-12-4' %}
 
 In preparation for lining, the worktable was covered with sheets of double reflective insulation (Reflectix) to reduce heat loss during the heating process. The temperature-controlled silicone rubber heat sheet was positioned for the adhesion of the first section at the bottom of the mural. Lastly, a coat of warm Beva 371b was applied to the face of the honeycomb panel, thus ensuring that the surfaces to be bonded were coated with a layer of the adhesive.
 
 The mural was positioned onto the honeycomb panel, sealed with Dartek film, and then transferred onto the silicone rubber heat sheet. The vacuum pumps were attached with quick-release vacuum connectors, the heat sheet was turned on, and metalized reflective Mylar was placed over the section to retain heat. Once the paint surface temperature of all areas of the section reached 65^°^C, the heat was turned off and the bonded area allowed to cool down.
 
-Everything appeared to have gone exactly as intended, but when the reflective Mylar was pulled back, a series of small bulges not present at the beginning of the heating process had developed along the center structural join of the panel ([**fig. 12.5**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/12-Hodkinson%20Pocobene/fig-12-5)). The cause of the deformations was delamination of the aluminum skins. The same problem was also discovered on the reverse of the panel, raising questions about what had caused the panel failure and how to proceed. Would we continue with the process in the hope that the rest of the panel would remain intact, or should the procedure be abandoned? Because the panel was intended to support the mural over the long term, we could not in good conscience continue to adhere the mural to what was clearly a structurally compromised support.
+Everything appeared to have gone exactly as intended, but when the reflective Mylar was pulled back, a series of small bulges not present at the beginning of the heating process had developed along the center structural join of the panel ([fig. 12.5](#fig-12-5)). The cause of the deformations was delamination of the aluminum skins. The same problem was also discovered on the reverse of the panel, raising questions about what had caused the panel failure and how to proceed. Would we continue with the process in the hope that the rest of the panel would remain intact, or should the procedure be abandoned? Because the panel was intended to support the mural over the long term, we could not in good conscience continue to adhere the mural to what was clearly a structurally compromised support.
+
+{% figure 'fig-12-5' %}
 
 The Boston Public Library was informed of this unfortunate setback, and in collaboration with the panel manufacturer we began to investigate the cause of the problem. At the same time, we started to formulate a strategy for the removal of the mural from the failed panel for remounting onto a new, structurally sound rigid support.
 
@@ -102,11 +112,15 @@ Some thought was given to the possibility of turning the mural on its face and d
 
 The only feasible approach was to reheat the entire bonded portion of mural and then to roll the canvas off the panel when the Beva 371b adhesive reached its release temperature. Before any such attempt was made, however, small-scale replicas of the partially adhered mural were made, and from these tests, a suitable approach was devised. Affixing the bottom edge of the linen interleaf under the mural to the equivalent of a very large diameter Sonotube, and then slowly rolling back the mural when the release temperature was reached, was deemed the most sensible tactic: it would support the canvas, minimize distortion, and reduce stress to the paint layers.
 
-It was empirically calculated that a tube with a diameter of 3.7 m would be required to accomplish the task. That being impractical, we decided to fabricate a section of such a tube large enough to cover the area of the adhered section. A form was fabricated by cutting 1.9 cm plywood into curved ribs attached to a frame ([**fig. 12.6**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/12-Hodkinson%20Pocobene/fig-12-6)). Lauan board (0.64 cm thick), chosen for its pliable characteristics, was then attached to the ribs to create the outer, curved surface of the form, against which the mural would be supported during the adhesion reversal.
+It was empirically calculated that a tube with a diameter of 3.7 m would be required to accomplish the task. That being impractical, we decided to fabricate a section of such a tube large enough to cover the area of the adhered section. A form was fabricated by cutting 1.9 cm plywood into curved ribs attached to a frame ([fig. 12.6](#fig-12-6)). Lauan board (0.64 cm thick), chosen for its pliable characteristics, was then attached to the ribs to create the outer, curved surface of the form, against which the mural would be supported during the adhesion reversal.
+
+{% figure 'fig-12-6' %}
 
 The curved plywood form was set over the mural and tied to 5 x 10 cm framing supports on either end with block-and-tackle pulleys. This arrangement would enable the operators at the four corners to slowly roll the curved form away from the bottom edge in a controlled manner, until the entire section was released. With the interleaf and linen facing tabs along the bottom of the mural secured to the bottom edge of the curved plywood form, the silicone heat sheet was turned on and the surface temperature of the aluminum honeycomb panel raised to 65^°^C.
 
-As the Beva 371b began to release, the bottom edge of the curved panel form was slowly raised while the other end was lowered, enabling the mural to be gently pulled away from the honeycomb panel ([**fig. 12.7**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/12-Hodkinson%20Pocobene/fig-12-7)). This went according to plan; however, cool air flowing between the surface of the panel and the underside of the linen interleaf caused stringing of the Beva 371b adhesive, a well-known occurrence in the hot-melt glue industry. As the strings cooled, the resulting hardening of the adhesive impeded the effort to pull the mural off the panel at an effective pace. Severing the strings with a metal spatula as they formed enabled the procedure to continue. The total time to reverse the lining, from the moment of lifting the curved form to complete detachment, took only four minutes. Critical to the success of the reversal process was the presence of the linen interleaf, which provided much needed support for the mural and took the brunt of the applied stress.
+As the Beva 371b began to release, the bottom edge of the curved panel form was slowly raised while the other end was lowered, enabling the mural to be gently pulled away from the honeycomb panel ([fig. 12.7](#fig-12-7)). This went according to plan; however, cool air flowing between the surface of the panel and the underside of the linen interleaf caused stringing of the Beva 371b adhesive, a well-known occurrence in the hot-melt glue industry. As the strings cooled, the resulting hardening of the adhesive impeded the effort to pull the mural off the panel at an effective pace. Severing the strings with a metal spatula as they formed enabled the procedure to continue. The total time to reverse the lining, from the moment of lifting the curved form to complete detachment, took only four minutes. Critical to the success of the reversal process was the presence of the linen interleaf, which provided much needed support for the mural and took the brunt of the applied stress.
+
+{% figure 'fig-12-7' %}
 
 ## Honeycomb Panel Redesign
 
@@ -120,13 +134,15 @@ The challenges encountered during reversal of the partially adhered portion of t
 
 As supplied by the manufacturer, paraffin wax makes up 9% of Beva 371b. It was deduced that the addition of a low-temperature paraffin wax to the stock solution would reduce not only the activation temperature of the adhesive but also the percentage of the other resins and tackifiers in the solution, thereby reducing the adhesive’s strength. Empirical tests were performed to determine if a modified adhesive with these desirable properties could be produced. Using Beva 371b dry resin mix, batches of the adhesive were weighed out and dissolved in solvents according to the manufacturer’s directions. They were then modified by adding 5% and 10% by weight of paraffin wax. A paraffin wax with a melting temperature of 50^°^C–54.4^°^C was chosen for testing. A control sample of unmodified Beva 371b was also prepared for comparison. Scrap samples of thick nineteenth-century decorative canvas, along with linen interleaf fabrics, were adhered to small honeycomb test panels. From the tests, it was determined that it was possible to sufficiently adhere the test samples at a much lower temperature of 54.4^°^C measured at the paint surface. The tests also indicated that at the interface between the aluminum panel and linen interleaf, the temperature remained below 60^°^C
 
-To determine if the adhered samples could be released with less force, small, rigid cardboard tubes were attached to one edge of the test samples and the panels heated until the surface of the paint reached 54.4^°^ C. Whereas it was not possible to roll back the unmodified Beva 371b at that temperature, the 5% and 10% samples both released from the aluminum panel, especially the latter, which could be rolled back using relatively little force ([**fig. 12.8**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/12-Hodkinson%20Pocobene/fig-12-8)). Based on these empirical tests, it was decided to adhere the mural with a Beva 371b solution modified with the addition of 10% paraffin by weight. Because the lead-white adhesive on the reverse of the mural acted as a barrier, there was little concern that the modified adhesive would darken the canvas because of its increased flow.
+To determine if the adhered samples could be released with less force, small, rigid cardboard tubes were attached to one edge of the test samples and the panels heated until the surface of the paint reached 54.4^°^ C. Whereas it was not possible to roll back the unmodified Beva 371b at that temperature, the 5% and 10% samples both released from the aluminum panel, especially the latter, which could be rolled back using relatively little force ([fig. 12.8](#fig-12-8)). Based on these empirical tests, it was decided to adhere the mural with a Beva 371b solution modified with the addition of 10% paraffin by weight. Because the lead-white adhesive on the reverse of the mural acted as a barrier, there was little concern that the modified adhesive would darken the canvas because of its increased flow.
+
+{% figure 'fig-12-8' %}
 
 ## Completion of the Marouflage Procedure
 
-Assured that the new, redesigned honeycomb panel would tolerate the lining process, the mounting of the mural proceeded as originally conceived. A coat of the modified Beva 371b solution was applied to the surface of the new honeycomb panel and allowed to dry. The linen and Kozo paper facings were then removed from the mural surface. As previously described, the mural assembly was wrapped in its Dartek vacuum envelope. The first section of the mural was successfully adhered to the panel using the modified Beva 371b adhesive at a paint surface temperature of 54.4^°^C. Once cooled to room temperature, the panel was temporarily lifted onto foam blocks to reposition the silicone heat sheet under the next section of the mural (see [**fig. 12.4**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/12-Hodkinson%20Pocobene/fig-12-4)). Section by section, the entire mural was successfully adhered using this system. The Belgian linen edges extending beyond the perimeter of the mural canvas were then wrapped around the edges and over the back of the honeycomb panel and adhered with Beva 371b using warm irons. Four heavy-duty metal right-angle brackets (two on each side) were mounted with epoxy and screws to the panel edges and back.
+Assured that the new, redesigned honeycomb panel would tolerate the lining process, the mounting of the mural proceeded as originally conceived. A coat of the modified Beva 371b solution was applied to the surface of the new honeycomb panel and allowed to dry. The linen and Kozo paper facings were then removed from the mural surface. As previously described, the mural assembly was wrapped in its Dartek vacuum envelope. The first section of the mural was successfully adhered to the panel using the modified Beva 371b adhesive at a paint surface temperature of 54.4^°^C. Once cooled to room temperature, the panel was temporarily lifted onto foam blocks to reposition the silicone heat sheet under the next section of the mural (see [fig. 12.4](#fig-12-4)). Section by section, the entire mural was successfully adhered using this system. The Belgian linen edges extending beyond the perimeter of the mural canvas were then wrapped around the edges and over the back of the honeycomb panel and adhered with Beva 371b using warm irons. Four heavy-duty metal right-angle brackets (two on each side) were mounted with epoxy and screws to the panel edges and back.
 
-After selective filling and retouching, the mural was transported back to the staging for reinstallation. With just 3 mm of play on either side, the panel slid easily into its niche. The mural was positioned and checked for level, and the angle brackets were then screwed securely into corresponding wood blocking mounted in the niche recess (see [**fig. 12.1**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/12-Hodkinson%20Pocobene/fig-12-1)).
+After selective filling and retouching, the mural was transported back to the staging for reinstallation. With just 3 mm of play on either side, the panel slid easily into its niche. The mural was positioned and checked for level, and the angle brackets were then screwed securely into corresponding wood blocking mounted in the niche recess (see [fig. 12.1](#fig-12-1)).
 
 ## Conclusions and Further Research
 
@@ -139,8 +155,6 @@ The original formula Beva 371 was specifically developed for the lining and cons
 For the conservation treatment, the authors would like to thank Liza Leto-Fulton, Peggy Waldron, Alexa Beller, Piero Pocobene, Lorraine Bigrigg, and T. K. McClintock; and for the mural deinstallation/reinstallation, Ivan Myjer, David Kalan, Matteo Pocobene, Derek Fisher, Bill Barry, and Marr Scaffolding Company. Finally, thanks to Meghan Weekes, Ellen Donaghey, and Jim Meade at the Boston Public Library.
 
 ## Appendix
-
-#
 
 ### Materials List
 
